# panbox

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
panbox/: cli.py  config.py  library.py  matcher.py  pipeline.py  variety.py
panbox/clouds/: __init__.py  ali.py  baidu.py  base.py  drive115.py  quark.py
panbox/scraper/: artwork.py  nfo.py  tmdb.py
skills/panbox/: SKILL.md
tests/: test_cli.py  test_library.py  test_matcher.py  test_pipeline.py  test_tmdb.py  test_variety.py
